--- a/photo-service/pom.xml
+++ b/photo-service/pom.xml
@@ -33,6 +33,11 @@
             <version>1.16.2</version>
             <scope>provided</scope>
         </dependency>
+	<dependency>
+	    <groupId>jmagick</groupId>
+	    <artifactId>jmagick</artifactId>
+	    <version>6.6.9</version>
+	</dependency>
     </dependencies>
 
     <build>
